--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,24 @@
 plugins {
     id 'java-library'
+    id 'application'
+    id 'io.qameta.allure' version '2.8.1'
 }
 
 repositories {
     mavenCentral()
 }
 
+allure {
+    version = "2.13.8"
+    autoconfigure = true
+    aspectjweaver = true
+    useJUnit5 {
+        version ="2.13.8"
+    }
+}
+
 dependencies {
+    testImplementation "io.qameta.allure:allure-java-commons:2.13.8"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
 }
