--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allure {
 
 dependencies {
     testImplementation "io.qameta.allure:allure-java-commons:2.13.8"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
 }
